fixing image name

--- a/index.html
+++ b/index.html
@@ -183,19 +183,19 @@
 					<div class="m-width-89 m-margin-auto-n-top-10 margin-top-24 light-font font-18 m-font-15 letter-line-height-22 m-text-align">Parse values from metadata in HTML documents to enable a proper response. The parser is managed by modules to offer fast and reliable deployment.</div>
 				</div>
 				<div class="center">
-					<img src="./assets/images/Parser.gif" height="350px">
+					<img src="./assets/images/ParserDesktop.gif" height="350px">
 				</div>
 			</div>
 			<div class="margin-top-45 margin-bottom-45 feature-section">
 				<div class="center">
-					<img src="./assets/images/Result.png" height="350px">
+					<img src="./assets/images/ResultDesktop.png" height="350px">
 				</div>
 				<div>
 					<div class="center font-28 m-font-20 regular-font letter-spacing-05">Result</div>
 					<div class="m-width-89 m-margin-auto-n-top-10 margin-top-24 light-font font-18 m-font-15 letter-line-height-22 m-text-align">The Transcode Engine, using industry standards, produces two common format responses: JSON or XML.</div>
 				</div>
 				<div class="center">
-					<img src="./assets/images/Result.png" height="350px">
+					<img src="./assets/images/ResultDesktop.png" height="350px">
 				</div>
 			</div>
 		</div>
