--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 		</div>
 	</div>
 	<div id="footer" class="m-center">
-		<div class="horizontal-menu-container font-14 light-font" style="color: #0090d2;">Copyright &copy; 2017 | Photon Interactive Indonesia</div>
+		<div class="horizontal-menu-container font-14 light-font" style="color: #0090d2;">Copyright &copy; 2017 | Photon Interactive</div>
 	</div>
 	<script type="text/javascript">
 		$("#logo").click(function(){
