Fixing url homw

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</ul>
 	</div>
 	<div id="header">
-		<a href="Home.html" class="link">
+		<a href="/" class="link">
 			<img src="./assets/images/Logo_header.png">
 		</a>
 		<div class="mobile-header hide m-table" style="width: 100%;">
